fix nav menu not properly opening on mobile

--- a/Styles/layout/_app-shell.scss
+++ b/Styles/layout/_app-shell.scss
@@ -424,12 +424,12 @@ body.modal-open & {
       transform: none;
       visibility: hidden;
 
-      &-open {
+      &.open {
         visibility: visible;
       }
     }
 
-    &-open {
+    &.open {
       transform: translateX(0);
       pointer-events: auto;
 
